* Fixed minor bug in theme support. (bug #121) [Ivo]
* Fixed bug in userpreferences. [Ivo]
* Fixed bug that corrupted time registration enties for users with id's of
  more than 1 digit. [Ivo]
* Achievo should no longer generate notices when php error_reporting is set to
  E_ALL. (bug #74) [Ivo]
* Fixed bug in project filter (non-active projects were not editable). [Ivo]

Changes in Achievo 0.9.3
------------------------
+ Added calendar popup to all date fields. [Ivo]
+ Newly added employee contracts now have default values depending on 
  the previous contract of that employee. [Ivo]
* Fixed bug: In new employee contracts, sunday was always selected. [Ivo]
* Fixed bugs where wrong userid foreign key was used. (bug #113) 
  [Jean-Charles, Ivo]
* Setup.php now correctly checks PHP 4.1.0 requirement. (bug #112) [Kevin]
* Setup.php now correctly detects Achievo 0.9 database. (bug #118) [Jonas]
* Fixed bugs in 0.9.1 conversion script. (bug #117) [Ivo]
* Fixed sql error in activitystats when no activity was selected. (bug #116)
  [Jean-Charles]
- Removed the redundant 'organization archive' feature. (bug #114) [Ivo]

Changes in Achievo 0.9.2
------------------------
* Reorganised Achievo codebase. Everything is now located in modules. 
  [Lineke, Ivo]
+ Added a cron script that sends reminders for todo's. [Ivo]
+ The search box in the top frame now works for contacts, projects and
  customers. [Ivo]
* Contactpersons and employees are generalized to 'person'. (Both stored in 
  one table now) [Lineke]
+ Instead of one 'customer' and one 'contactperson', a project now has
  multiple teammembers, each having a configurable 'role'. [Lineke]
+ In the hoursurvey, you can now filter hours using this role. [Ivo]
* Renamed customer to organization (which can have multiple roles, one of
  which could be 'Customer'). [Lineke]
+ Added 'state' field to organization and person. [Ivo]
+ Added 'function' field to person. [Lineke]